Update converted amount to UI

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Converted Amount Display -->
     <div id="converted-amount" class="mt-4 hidden bg-gray-100 p-4 rounded-md text-center text-lg font-medium text-gray-800">
       <!-- Placeholder for the converted amount -->
-      Converted Amount: $0.00
+      Converted Amount: <span></span>
     </div>
   </div>
   <script src="./script.js"></script>
